--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "dependencies": {
     "@nodelib/fs.stat": "^2.0.2",
     "@nodelib/fs.walk": "^1.2.3",
-    "glob-parent": "^5.1.2",
+    "glob-parent": "6.0.2",
     "merge2": "^1.3.0",
     "micromatch": "^4.0.4"
   },
